k8s/server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
